# FX-Project

./: .gitignore  CITATION_CHECKLIST.md  CODE_REVIEW_NOTES.md  HANDOFF.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: interpretation.md  limitations.md  methodology.md  website_summary.md
scripts/: reproduce_paper.py
src/: __init__.py  _original_paper_code.py  config.py  data_engine.py  econometrics.py  evaluation.py  features.py  main.py  models.py  plotting.py
tests/: conftest.py  test_data_engine.py  test_feature_construction.py  test_lookahead_guard.py
